@@ -143,3 +143,4 @@ config.py
 # ln
 
 doujins/
+app/doujins/*
