@@ -1,5 +1,6 @@
 import os
 
 class Config:
-	doujin_path = os.path.join(os.path.dirname(os.path.realpath(__file__)), 'app/doujins/')
+	doujin_path = os.path.join(os.path.dirname(os.path.realpath(__file__)), 'app/static/doujins/')
 	port = '8002'
+	max_concurrent_downloads = 5
